@@ -42,15 +42,13 @@ data:extend(
         drawing_box = {{-0.5, -3}, {3.2, 0.5}},
             energy_source =
             {
-            type = "electric",
-            buffer_capacity = "20kJ",
-            usage_priority = "primary-output",
-            input_flow_limit = "0kW",
-            output_flow_limit = "160kW",
-            render_no_power_icon = false,
+                type = "electric",
+                buffer_capacity = "20kJ",
+                usage_priority = "primary-output",
+                output_flow_limit = "160kW",
+                render_no_power_icon = false,
             },
         energy_production = "160kW",
-        energy_usage = "0kW",
         animation =
         {
             filename = "__Better-Energy-production__/graphics/animation/advanced-wind-turbine.png",
